--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <properties>
 	<maven.compiler.source>1.8</maven.compiler.source>
 	<maven.compiler.target>1.8</maven.compiler.target>
+	<aspectj.version>1.8.10</aspectj.version>
  </properties>
   <dependencies>
   	<dependency>
@@ -189,10 +190,37 @@
 	  <artifactId>tomcat-websocket-api</artifactId>
 	  <version>9.0.34</version>
 	</dependency>
+    <dependency>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-junit4</artifactId>
+        <version>2.13.3</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>web-application</finalName>
     <plugins>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.20</version>
+            <configuration>
+                <testFailureIgnore>false</testFailureIgnore>
+                <properties>
+                    <property>
+                        <name>listener</name>
+                        <value>io.qameta.allure.junit4.AllureJunit4</value>
+                    </property>
+                </properties>
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.aspectj</groupId>
+                    <artifactId>aspectjweaver</artifactId>
+                    <version>${aspectj.version}</version>
+                </dependency>
+            </dependencies>
+      </plugin>
 	  <plugin>
 			<groupId>org.jacoco</groupId>
 			<artifactId>jacoco-maven-plugin</artifactId>
@@ -204,7 +232,7 @@
 					</goals>
 				</execution>
 				<!-- attached to Maven test phase -->
-				<execution>
+			    <execution>
 					<id>report</id>
 					<phase>test</phase>
 					<goals>
