--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,7 @@
 						<goal>check</goal>
 					</goals>
 					<configuration>
+					    <haltOnFailure>false</haltOnFailure>
 						<rules>
 							<rule implementation="org.jacoco.maven.RuleConfiguration">
 								<element>BUNDLE</element>
