--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,7 @@
 						<goal>check</goal>
 					</goals>
 					<configuration>
-					    <haltOnFailure>false</haltOnFailure>
+					    <haltOnFailure>true</haltOnFailure>
 						<rules>
 							<rule implementation="org.jacoco.maven.RuleConfiguration">
 								<element>BUNDLE</element>
@@ -254,7 +254,7 @@
 									<limit implementation="org.jacoco.report.check.Limit">
 										<counter>INSTRUCTION</counter>
 										<value>COVEREDRATIO</value>
-										<minimum>0.50</minimum>
+										<minimum>0.99</minimum>
 									</limit>
 								</limits>
 							</rule>
